[gd_scene load_steps=23 format=3 uid="uid://dh87mnej1niyg"]

[ext_resource type="Script" uid="uid://cfaq8jxty0xbd" path="res://main.gd" id="1_h2yge"]
[ext_resource type="PackedScene" uid="uid://3qeya4te7ai8" path="res://player.tscn" id="1_ig7tw"]
[ext_resource type="PackedScene" uid="uid://cr5rijkoa4wvx" path="res://mob.tscn" id="2_1bvp3"]
[ext_resource type="PackedScene" uid="uid://d0tbhf41ygshg" path="res://hud.tscn" id="4_1bvp3"]
[ext_resource type="AudioStream" uid="uid://dn37iin1qscmq" path="res://art/The Abyssal Choir.mp3" id="5_efxa6"]
[ext_resource type="PackedScene" uid="uid://0jpxybv7lmf4" path="res://power_up.tscn" id="6_7mycd"]
[ext_resource type="AudioStream" uid="uid://1msx8j5h0qgq" path="res://art/Nihil.mp3" id="6_dg77c"]
[ext_resource type="PackedScene" uid="uid://bx1g0gqfkew4b" path="res://Shield.tscn" id="7_272bh"]
[ext_resource type="AudioStream" uid="uid://xyrdlo20meix" path="res://art/The Abyssal Choir (1).mp3" id="7_dg77c"]
[ext_resource type="AudioStream" uid="uid://b6477uejse57b" path="res://art/220173__gameaudio__spacey-1uppower-up.wav" id="8_2cqfq"]
[ext_resource type="PackedScene" uid="uid://bvw4k2gad6ce2" path="res://bomb.tscn" id="8_5vw27"]
[ext_resource type="PackedScene" uid="uid://uhbjjb2cphua" path="res://bolt.tscn" id="9_kek77"]
[ext_resource type="AudioStream" uid="uid://dfqbq616gv1wq" path="res://art/478342__joao_janz__bouncing-power-up-1_5.wav" id="9_yaehf"]
[ext_resource type="PackedScene" uid="uid://c28djv5vvfu4e" path="res://fast_enemy.tscn" id="10_4c57u"]
[ext_resource type="AudioStream" uid="uid://bdq7vio7qt0fo" path="res://art/452998__breviceps__blip-wave.wav" id="10_074og"]
[ext_resource type="PackedScene" uid="uid://bo8ll0ogdrtkj" path="res://World.tscn" id="13_ycdy4"]

[sub_resource type="Gradient" id="Gradient_4c57u"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_efxa6"]
gradient = SubResource("Gradient_4c57u")

[sub_resource type="Environment" id="Environment_4c57u"]
background_mode = 3
background_color = Color(0.28652, 0.145565, 0.154159, 1)
background_energy_multiplier = 3.0
adjustment_enabled = true
adjustment_brightness = 0.85
adjustment_contrast = 0.92
adjustment_color_correction = SubResource("GradientTexture2D_efxa6")

[sub_resource type="Gradient" id="Gradient_dg77c"]
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_ycdy4"]
gradient = SubResource("Gradient_dg77c")
fill_from = Vector2(0.493088, 0)
fill_to = Vector2(0.497696, 1)

[sub_resource type="Curve2D" id="Curve2D_ycdy4"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 908, -563, 0, 0, 0, 0, 2028, -559, 0, 0, 0, 0, 2036, 289, 0, 0, 0, 0, 876, 273)
}
point_count = 4

[node name="Main" type="Node"]
script = ExtResource("1_h2yge")
mob_scene = ExtResource("2_1bvp3")

[node name="World" parent="." instance=ExtResource("13_ycdy4")]
unique_name_in_owner = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
unique_name_in_owner = true
environment = SubResource("Environment_4c57u")

[node name="ColorRect" type="ColorRect" parent="WorldEnvironment"]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -3176.0
offset_top = -464.0
offset_right = -2712.0
offset_bottom = -360.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.38861, 0.494457, 0.881218, 1)

[node name="Player" parent="." instance=ExtResource("1_ig7tw")]
unique_name_in_owner = true

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="HealthPowerTimer" type="Timer" parent="."]
wait_time = 8.106

[node name="ShieldPowerTimer" type="Timer" parent="."]
wait_time = 2.59

[node name="BombPowerTimer" type="Timer" parent="."]
wait_time = 10.0

[node name="BoltTimer" type="Timer" parent="."]
wait_time = 25.0
one_shot = true

[node name="Scene1Timer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="FastEnemyTimer" type="Timer" parent="."]
wait_time = 0.4

[node name="Scene1EndTimer" type="Timer" parent="."]
wait_time = 25.0
one_shot = true

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(950, 600)

[node name="HUD" parent="." instance=ExtResource("4_1bvp3")]

[node name="Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_efxa6")
bus = &"Music"

[node name="Music2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_dg77c")
bus = &"Music"

[node name="HealthUpSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_2cqfq")
bus = &"SFX"

[node name="ShieldUpSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_yaehf")
bus = &"SFX"

[node name="BombSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_074og")
volume_db = -7.885
bus = &"SFX"

[node name="DeathSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_dg77c")
bus = &"Music"

[node name="powerUp" parent="." instance=ExtResource("6_7mycd")]
position = Vector2(-264, 48)

[node name="RigidBody2D" parent="." instance=ExtResource("7_272bh")]
position = Vector2(-184, 88)

[node name="Bomb" parent="." instance=ExtResource("8_5vw27")]
position = Vector2(24, -136)

[node name="Bolt" parent="." instance=ExtResource("9_kek77")]
position = Vector2(-88, 1)

[node name="FastEnemy" parent="." instance=ExtResource("10_4c57u")]

[node name="Sunlight" type="PointLight2D" parent="."]
position = Vector2(968, 3184)
scale = Vector2(87.25, 171.75)
energy = 1.5
texture = SubResource("GradientTexture2D_ycdy4")

[node name="MobPath" type="Path2D" parent="."]
unique_name_in_owner = true
position = Vector2(-820, -97)
curve = SubResource("Curve2D_ycdy4")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
position = Vector2(908, -563)
rotation = 0.00357141

[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="timeout" from="HealthPowerTimer" to="." method="_on_health_power_timer_timeout"]
[connection signal="timeout" from="ShieldPowerTimer" to="." method="_on_shield_power_timer_timeout"]
[connection signal="timeout" from="BombPowerTimer" to="." method="_on_bomb_power_timer_timeout"]
[connection signal="timeout" from="BoltTimer" to="." method="_on_bolt_timer_timeout"]
[connection signal="timeout" from="Scene1Timer" to="." method="_on_scene_1_timer_timeout"]
[connection signal="timeout" from="FastEnemyTimer" to="." method="_on_fast_enemy_timer_timeout"]
[connection signal="timeout" from="Scene1EndTimer" to="." method="_on_scene_1_end_timer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
[connection signal="heal" from="powerUp" to="." method="_on_power_up_heal"]
[connection signal="bomb_collect" from="Bomb" to="." method="_on_bomb_bomb_collect"]
[connection signal="Bolt_collect" from="Bolt" to="." method="_on_bolt_bolt_collect"]
